# Mutriz

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: Boost.cmake  MatrixStructs.cmake  Mtxclient.cmake  Olm.cmake
